# prompt-assembler

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  mise.toml
.github/workflows/: ci.yml  release.yml
crates/pa/: Cargo.toml
crates/pa/src/: main.rs
crates/pa/tests/: cli.rs
crates/prompt-assembler/: Cargo.toml
crates/prompt-assembler/src/: lib.rs
crates/prompt-assembler/tests/: assembly.rs
